# FastAPI-Learning

Base Topics/1. Path parameters/: Path parameters.ipynb  Path parameters.md
Base Topics/1. Path parameters/Project/: controllers.py  main.py  models.py  pyproject.toml  services.py
Base Topics/2. Query parameters adn request body/: Query parameters and request body.md
Base Topics/2. Query parameters adn request body/Project/: constants.py  controllers.py  dependencies.py  main.py  models.py  pyproject.toml  services.py
Base Topics/3. Params validation/: Params validation.md
Base Topics/3. Params validation/Project/: constants.py  controllers.py  main.py  models.py  pyproject.toml  services.py
Base Topics/4. Request body (Advanced)/: 4. Request body (Advanced).md
Base Topics/4. Request body (Asvanced)/: main.py
