[tool.poetry]
name = "project for path parameters learning"
version = "0.1.0"
description = "A project which can help us to improve our knowledges about path parameters"
authors = ["mrForza <rg_programmer@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
